2010-04-26  James Wilkinson  <james@slor.net>
* ui.c: corrected H: error caused by turbo patch


2010-04-20  James Wilkinson  <james@slor.net>
* atari.c, monitor.[ch] DOC/trainer.txt: committed trainer searcher by Achim Haertel.

* atari.[ch], ui.c: committed savestate sound patch by Tomasz Krasuski.


2010-04-19  James Wilkinson  <james@slor.net>
* akey.h, atari.[ch], atari_sdl.c, atari_x11.c, ui.c, dos/atari_vga.c, win32/atari_win32.c:
  Added support for F12 turbo mode.

* win32/joystick.c: do not stop joystick enumeration on dual stick settings failure

* emuos.h, emuos.lis: update for 2010

* win32/atari_win32.h, win32/keyboard.c: DirectInput cleanup


2010-04-16  James Wilkinson  <james@slor.net>
* win32/atari_win32.c: correct keystroke auto-repeat


2010-03-23  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, atari.c, configure.ac, mzpokeysnd.c, pbi.c, pbi_xld.[ch],
pokey.c, pokeysnd.c, votrax.c, new files: voicebox.[ch], votraxsnd.[ch]:
emulate the Alien Group Voice Box I and II


2010-01-29  Piotr Fusik  <fox@scene.pl>
* ui.h, ui_basic.c: changed source code from CRLF to LF


2010-01-27  Perry McFarlane  <perry_m@fastmail.fm>
* af80.[ch], atari.c: fix coldstart for AF80.


2010-01-21  James Wilkinson  <james@slor.net>
* win32/render_direct3d.cpp: disable extended functions if supporting runtime not installed.

* configure.ac: remove dependency on libd3dx9.


2010-01-19  James Wilkinson  <james@slor.net>
* pbi_proto80.c: prevent extra carriage return in config file setting.

* win32/sound.c: don't try to reinit sound (causes crash) if -nosound was used.


2010-01-18  James Wilkinson  <james@slor.net>
* ui.[ch], win32/atari_win32.c, win32/render_direct3d.*, win32/render_gdi.c, win32/render_gdiplus.cpp, win32/screen_win32.[ch]:
  Committed updated DirectX display enhancements from David Dahlstrom.

* pbi_bb.c, pbi_mio.c, pbi_xld.c: prevent extra carriage returns in config file rom settings.


2010-01-17  James Wilkinson  <james@slor.net>